--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ numpy==1.24.2
 packaging==23.0
 pandas==1.5.3
 Pillow==9.4.0
+pygame==2.3.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
