New frame meanings

--- a/configuration/sys_dict_de.cfg
+++ b/configuration/sys_dict_de.cfg
@@ -35,27 +35,27 @@
     "button_properties": {
         "word_1": {
             "text": "",
-            "font": "Verdana 10 bold",
+            "font": "Verdana 9",
             "fg": "red",
-            "width": 15
+            "width": 20
         },
         "word_2": {
             "text": "",
-            "font": "Verdana 10 bold",
+            "font": "Verdana 9",
             "fg": "blue",
-            "width": 15
+            "width": 20
         },
         "word_3": {
             "text": "",
-            "font": "Verdana 10 bold",
+            "font": "Verdana 9",
             "fg": "green",
-            "width": 15
+            "width": 20
         },
         "word_4": {
             "text": "",
-            "font": "Verdana 10 bold",
+            "font": "Verdana 9",
             "fg": "dark orange",
-            "width": 15
+            "width": 20
         },
         "data": {
             "text": "Daten",
